objects/CommandCenter__Deployment_Checklist__c.object
<CustomObject>
    <fields>
        <fullName>CommandCenter__Component__c</fullName>
        <description>Salesforce Components - VF, Apex classes, objects etc</description>
        <inlineHelpText>Salesforce Components - VF, Apex classes, objects etc</inlineHelpText>
        <label>Component</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Deployment__c</fullName>
        <label>Deployment</label>
        <referenceTo>CommandCenter__Deployment__c</referenceTo>
        <relationshipLabel>Deployment Checklists</relationshipLabel>
        <relationshipName>Deployment_Checklists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicate whether the default is default for all deployments or it is for specific deployment.</inlineHelpText>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Step_Type__c</fullName>
        <defaultValue>&apos;Other&apos;</defaultValue>
        <label>Step Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Automate - Assign Permission Sets</fullName>
                </value>
                <value>
                    <fullName>Automate - Create Custom Settings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommandCenter__Steps_to_perform__c</fullName>
        <description>Steps to be performed - like deactivation of trigger, validation rule etc</description>
        <inlineHelpText>Steps to be performed - like deactivation of trigger, validation rule etc</inlineHelpText>
        <label>Steps to perform</label>
        <type>TextArea</type>
    </fields>
    <label>Deployment Checklist</label>
    <nameField>
        <displayFormat>Checklist-{0000}</displayFormat>
        <label>Deployment Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Checklists</pluralLabel>
    <recordTypes>
        <fullName>CommandCenter__PostDeploy</fullName>
        <active>true</active>
        <label>PostDeploy</label>
    </recordTypes>
    <recordTypes>
        <fullName>CommandCenter__PreDeploy</fullName>
        <active>true</active>
        <label>PreDeploy</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>